<resources>
    <string name="app_name">Holela</string>
    <string name="no_internet">No Internet </string>
    <string name="Language">Print your beautiful moments.</string>
    <string name="Language_one">Tell them about your journey and story.</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Continue_with_faceboook">Continue with Facebook</string>
    <string name="Sign_up_with_email">Continue with email</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="KW">KW</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Receive_SMS">You will receive an Email with code for the next step</string>
    <string name="Enter_mobile">Enter Mobile number</string>
    <string name="newpasswordagain">New password, again</string>
    <string name="record">Record</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="Enter_email">Enter Email Address</string>
    <string name="camera_error">Camera Error</string>
    <string name="Your_Story">Your Story</string>
    <string name="Search">Search....</string>
    <string name="whats">Whats going on</string>
    <string name="suggestionofyou">Suggestion of You</string>
    <string name="ShareOnFacebook">Share On Facebook</string>
    <string name="ShareOnMessenger">Share On Messenger</string>
    <string name="Tweet">Post</string>
    <string name="CopyUrl">Copy Share URL</string>
    <string name="TurnOffnotification">Turn Off Post Notification</string>
    <string name="Stop">Stop</string>
    <string name="Cancel">Cancel</string>
    <string name="Report">Report</string>
    <string name="facebook_app_id">1139045399572571</string>
    <string name="fb_login_protocol_scheme">fb1139045399572571</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="New_msg">New Message</string>
    <string name="message">Chats</string>
    <string name="UserName">User Name</string>
    <string name="EnterUserName">Enter User Name</string>
    <string name="msg">Write Your Message......</string>
    <string name="incorrent">Incorrect Confirm Password</string>
    <string name="Enter_Otp">Enter Your OTP</string>
    <string name="AlreadyAccount">Already Have An Account?</string>
    <string name="Edit_Profile">Edit Profile Picture</string>
    <string name="Delete_Post">Delete Post</string>
    <string name="block">Block</string>
    <string name="EyeCamera">Camera</string>
    <string name="EyeVideo">Video</string>
    <string name="Eyegallery">Gallery</string>
    <string name="Share">Share</string>
    <string name="post">Post</string>
    <string name="NewPassword">Enter New Password</string>
    <string name="Confirmnew">Confirm New Password</string>
    <string name="Sign_in"><![CDATA[<u>Sign in</u>]]></string>
    <string name="Enter_Usename">Email or Username</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="Reset">Reset Password</string>
    <string name="ResetdONE">Reset Password Successfully</string>
    <string name="Username_signup">Enter Email id</string>
    <string name="Password_Signup">Enter Password</string>
    <string name="Mobile_Signup">Enter Mobile Number</string>
    <string name="Fullname_Signup">Enter Your Full name</string>
    <string name="Forgot_Password"><![CDATA[<u>Forgot Password ?</u>]]></string>
    <string name="ConfirmPassword">Enter Confirm Password</string>
    <string name="ValidMail">Enter Valid Email</string>
    <string name="Repost">Do you Want To Repost ?</string>
    <string name="blockpermission">Do you Want To Block ?</string>
    <string name="ValidPassword">Enter Valid Password</string>
    <string name="ValidName">Enter Valid Name</string>
    <string name="ValidUserName">Enter Valid Username</string>
    <string name="Ok">Ok</string>
    <string name="Post">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="EditProfile">Edit your profile</string>
    <string name="MyAllnewStatus">My All New Status</string>
    <string name="Temp">To enjoy good health, to bring true happiness to one\'s family, to bring peace to all, one must
        first discipline and control ones own mind. If a man can control his mind he can find the way to Enlightenment,
        and all wisdom and virtue will naturally come to him.
    </string>
    <string name="upload_activity">UploadActivity</string>
    <string name="download_activity">DownloadActivity</string>
    <string name="download_selection_activity">Select a file from the bucket</string>
    <string name="download">Download</string>
    <string name="manage_download">Manage downloads</string>
    <string name="upload">Upload</string>
    <string name="manage_upload">Manage uploads</string>
    <string name="upload_file">Upload a file</string>
    <string name="upload_image">Upload an image</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change Password</string>
    <string name="delete">Delete</string>
    <string name="pause_all">Pause all</string>
    <string name="cancel_all">Cancel all</string>
    <string name="refreshing">Refreshing</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="Follow">Follow</string>
    <string name="Unblock">Unblock</string>
    <string name="UnFollow">Unfollow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit Profile</string>
    <string name="option">Options</string>
    <string name="capture_button">Click to capture photo</string>
    <string name="desc">Capture image holder</string>
    <string name="title_activity_following_list">FollowingList</string>
    <string name="FOLLOWING">FOLLOWING</string>
    <string name="Follower">FOLLOWERS</string>
    <string name="resend"><![CDATA[<u>Resend Otp</u>]]></string>
    <string name="Emailempty">Enter Valid Email</string>
    <string name="Emailforgot">Email address does not exist..!!</string>
    <string name="EnterAlldata">Enter all data</string>
    <string name="Blankdata">Please Enter Password</string>
    <string name="Entersix">Please enter atleast 6 characters</string>
    <string name="confirmpass">Please Enter Confirm Password</string>
    <string name="mobileempty">Please Enter valid mobile number</string>
    <string name="otpmsg">OTP resend successfully</string>
    <string name="title_activity_postcamerviewpager">Postcamerviewpager</string>
    <string name="deletecomment">Do you want to delete comment ?</string>
    <string name="changelanguage">Change Language</string>
    <string name="logout">Logout</string>
    <string name="privacy">Privacy policy</string>
    <string name="termss">Terms And Condition</string>
    <string name="terms">By clicking Next, you agree to our <a href="http://myholela.com/beta/termsandconditions">Holela terms</a> and that you have read our <a href="http://myholela.com/beta/privacy">Data Policy</a> , Including our policy on Cookie Use. You may receive SMS message notification from Holela and can opt out at any time. </string>
    <string name="and"><a href='http://myholela.com/beta/termsandconditions'>Holela terms</a></string>
    <string name="condition"></string>
    <string name="term2"></string>
    <string name="term3"> </string>
    <string name="defaultpassword">User Guide </string>
    <string name="privatepublic">Private Account</string>
    <string name="blocklist">Block List</string>
    <string name="flag">Flag As Inappropriate</string>
    <string name="comment">Comments</string>
    <string name="bio">Bio</string>
    <string name="like">Likes</string>

</resources>
