<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
   android:layout_height="wrap_content"
    android:background="@drawable/language_selector_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100dp"
            android:layout_marginLeft="@dimen/_80dp"
            android:layout_marginRight="@dimen/_80dp"
            android:src="@drawable/lang_screen_logo_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100dp"
            android:layout_marginLeft="@dimen/_80dp"
            android:layout_marginRight="@dimen/_80dp"
            android:src="@drawable/lang_screen_logo_text" />

        <com.holela.Controller.Textview_open_regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Language"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp" />

        <com.holela.Controller.Textview_open_regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Language_one"
            android:textColor="@color/White"
            android:textSize="@dimen/_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rr_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:background="@color/language_bg">

                <com.holela.Controller.Textview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:layout_marginLeft="@dimen/_25dp"
                    android:layout_marginRight="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:text="@string/Arabic"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rr_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/language_bg">

                <com.holela.Controller.Textview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:layout_marginLeft="@dimen/_25dp"
                    android:layout_marginRight="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:text="@string/English"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14sp" />


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
