<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.holela.Fragment.Change_PassWord">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--   <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:id="@+id/back"
            android:src="@drawable/back"

            />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/cancel"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_85dp"
                android:layout_toRightOf="@id/back"
                android:text="@string/change"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/save"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/check"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="vertical">

        <com.holela.Controller.Edittext_open_semi_bold
            android:id="@+id/currentpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:backgroundTint="@color/postdetail"
            android:hint="@string/currentpassword"
            android:paddingTop="@dimen/_1dp"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_12sp" />

        <com.holela.Controller.Edittext_open_semi_bold
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:backgroundTint="@color/postdetail"
            android:hint="@string/newpassword"
            android:paddingTop="@dimen/_1dp"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_12sp" />

        <com.holela.Controller.Edittext_open_semi_bold
            android:id="@+id/newpasswordagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:backgroundTint="@color/postdetail"
            android:hint="@string/newpasswordagain"
            android:paddingTop="@dimen/_1dp"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_12sp" />

    </LinearLayout>


</LinearLayout>
